# flaggers-bot

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  config.json.example  dev.sh  docker-compose.yml  install.sh  publish.sh  release-plz.toml
.github/workflows/: build.yml  release.yml
dump_psychctf.xyz/beginner_Broken Terminal/: pwn_chal
dump_psychctf.xyz/beginner_Crypto is Fun/: enc.txt
dump_psychctf.xyz/beginner_Patient Zero/: enc.txt
dump_psychctf.xyz/beginner_Static/: capture.pcap
dump_psychctf.xyz/beginner_Warden's Lock/: patient_access
src/: bot.rs  cli.rs  config.rs  constants.rs  ctftime.rs  daemon.rs  main.rs
src/adapters/: cli.rs  commands.rs  handlers.rs  mod.rs
src/application/: ctfd.rs  ctftime.rs  mod.rs  services.rs
src/commands/: ctftime.rs  misc.rs  mod.rs
src/infrastructure/: mod.rs  systemd.rs  updater.rs
