[package]
name = "flaggers_bot"
version = "2.0.16"
edition = "2024"

[dependencies]
poise = "0.6.1"
tokio = { version = "1.50.0", features = ["rt-multi-thread", "fs"] }
serenity = { version = "0.12", default-features = false, features = ["builder", "cache", "client", "gateway", "http", "model", "utils", "rustls_backend"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sysinfo = "0.32"
html-to-markdown-rs = "2.28.2"
